--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
       <span class="border15"></span>
   </div>
 
+  <p>seminar</p>
+
   <div class="border-sector16">
       <p>15:00</p>
       <span class="border16"></span>
