--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
     </div>
     </header>
-
+<!-- 
     <section>
       <div class="border-sector1">
         <p>0:00</p>
@@ -106,8 +106,6 @@
       <span class="border15"></span>
   </div>
 
-  <p>seminar</p>
-
   <div class="border-sector16">
       <p>15:00</p>
       <span class="border16"></span>
@@ -160,7 +158,7 @@
 
 
 
-    </section>
+    </section> -->
 
   <span id="setting_time"></span>
 
