--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
   <span id="setting_time"></span>
 
   <div class="set-right">
-    <!-- <img src="img/person.png" alt=""  class="person_icon">
+    <img src="img/person.png" alt=""  class="person_icon">
     <img src="img/Reply.png" alt="" class="reply_icon">
     <img src="img/sign.png" alt="" class="sign_icon">
-    <img src="img/friend-addtion.png" alt="" class="friend-addtion_icon"> -->
+    <img src="img/friend-addtion.png" alt="" class="friend-addtion_icon">
     <img src="img/talk.png" alt="" class="talk_icon">
 
     <img src="img/setting.png" alt="" class="setting_icon">
