--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   <span id="setting_time"></span>
 
   <div class="set-right">
-    <img src="img/person.png" alt=""  class="person_icon">
+    <a href=""><img src="img/person.png" alt=""  class="person_icon"></a>
     <img src="img/Reply.png" alt="" class="reply_icon">
     <img src="img/sign.png" alt="" class="sign_icon">
     <img src="img/friend-addtion.png" alt="" class="friend-addtion_icon">
