拡張子を変えました

--- a/person.html
+++ b/person.html
@@ -46,7 +46,7 @@
   <!-- カレンダー制作 -->
   <div class="calendar">
 
-    <img src="img/mypicture.jpeg" alt="">
+    <img src="img/mypicture.png" alt="">
 
   </div>
 
