--- a/person.html
+++ b/person.html
@@ -17,7 +17,7 @@
         <img src="img/watch.png" alt="" class="watch_icon">
       </div>
 
-      <span id="view_time">プロフィール</span>
+      <span id="view_time">Profile</span>
 
       <div class="header-left">
         <div class="header-icon">
@@ -34,7 +34,7 @@
 
   <div class="set-right">
     <a href=""><img src="img/person.png" alt=""  class="person_icon"></a>
-    
+
     <img src="img/Reply.png" alt="" class="reply_icon">
 
     <img src="img/sign.png" alt="" class="sign_icon">
