--- a/person.html
+++ b/person.html
@@ -48,11 +48,32 @@
   </div>
 
   <!-- カレンダー制作 -->
-  <div class="calendar">
+  <div class="profile">
 
-    <img src="img/mypicture.jpeg" alt="" class="mypicture">
 
+    <div class="profile_left">
+
+    <img src="img/mypicture.jpeg" alt=""
+    class="mypicture">
+
+    </div>
+
+    <div class="profile_right">
+
+    <h1>鈴木 湧</h1>
+    <h2>ユーザーID</h2>
+    <p>プロフィール：こんにちは、湧です。よろしく</p>
+
+
+    <div class="setting_button">
+      <p>
+        設定
+        <img src="img/setting.png" alt=""
+        class="setting_button_icon">
+      </p>
+    </div>
   </div>
+</div>
 
 
 </div>
